--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=CodeSearchEngine
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/codeSearchEngine
 spring.datasource.username=postgres
-spring.datasource.password=123123
+spring.datasource.password=hashem1234!!
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
