--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,11 @@
             <artifactId>tika-core</artifactId>
             <version>2.6.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.github.javaparser</groupId>
+            <artifactId>javaparser-core</artifactId>
+            <version>3.26.3</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
